--- a/test.html
+++ b/test.html
@@ -41,15 +41,12 @@
 			<div id="a8" class="a">asdf</div>
 			<div id="a9" class="a">asdf</div>
 		</div>
-		<script type="text/javascript" src="jtools.js"></script>
+		<script type="text/javascript" src="shizzle.js"></script>
 		<script type="text/javascript">
 			function run() {
-				var selector = '#wrap div.xyz';
-				//$(selector).fadeOut(500);return;
-				var t=new Date();
-				//for(var i=0; i<100000; ++i) document.getElementById('box3');
-				for(var i=0; i<10000; ++i) $(selector);
-				alert(new Date()-t);
+				var selector = '#wrap div[class!=xyz]';
+				//$(selector).fadeOut(500);
+				alert($(selector).length);
 			}
 		</script>
 	</body>
